charts/addons/charts/victoriaMetrics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmagent
  namespace: cluster-2

spec:
  ingressClassName: nginx
  rules:
  - host: agent.cluster-2.ingress.dobry-kot.ru
    http:
      paths:
      - backend:
          service:
            name: vmagent-example-vmagent
            port:
              number: 8429
        path: /
        pathType: Prefix
